[package]
name = "maib-client"
version = "0.3.2"
edition = "2021"
resolver = "3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AleVul/maib-client"
description = "An unofficial Rust client for MAIB API"
readme = "README.md"
keywords = ["maib", "api", "http", "client"]
categories = ["web-programming::http-client"]
exclude = [
    ".env",
]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10.3" }
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
sha2 = "0.10.9"

[dev-dependencies]
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "macros"] }

